--- a/css/style.css
+++ b/css/style.css
@@ -11,4 +11,85 @@
     --background-color: #f5f5f5;
     --text-color: #3D3A38;
     --accent-color: #50e3c2;
+    --rating-color: gold;
+}
+
+body {
+    background-color: var(--background-color);
+    margin: 0;
+    padding: 0;
+    box-sizing: border-box;
+    font-size: 16px;
+}
+
+body,
+p,
+a,
+span,
+li {
+    font-family: 'Montserrat', sans-serif;
+    color: var(--text-color);
+    font-weight: 400;
+    line-height: 1.24;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+    font-family: 'Poppins', sans-serif;
+    color: var(--text-color);
+    margin-bottom: 15px;
+    font-weight: 400;
+    font-size: 2rem;
+    /* Settato a 2rem nonostante le indicazioni del pdf per renderlo leggibile */
+    line-height: 1.5;
+    text-shadow: 0.2px 0.2px 0.4px rgba(0, 0, 0, 0.1);
+
+}
+
+h1 {
+    font-size: 4rem;
+    /* Settato a 4rem nonostante le indicazioni del pdf per renderlo leggibile */
+}
+
+a {
+    color: var(--primary-color);
+    text-decoration: none;
+}
+
+a:hover {
+    text-decoration: underline;
+}
+
+p {
+    color: var(--text-color);
+    font-size: 1.2rem;
+}
+
+.rating-icon{
+    width: 24px;
+    height: 24px;
+    fill: var(--rating-color);
+    margin-right: 4px;
+}
+.mini{
+    width: 12px;
+    height: 12px;
+}
+
+.duck-price {
+    font-weight: 700;
+    font-size: 1.2rem;
+    margin-top: 4px;
+    color:var(--secondary-color)
+}
+
+.bullet-icon{
+    width: 48px;
+    height: 48px;
+    fill: var(--primary-color);
+    margin-bottom: 12px;
 }
