--- a/css/swiper.css
+++ b/css/swiper.css
@@ -1,4 +1,18 @@
 .swiper {
-  width: 600px;
-  height: 300px;
-}
+      width: 100%;
+      height: 100%;
+    }
+
+    .swiper-slide {
+      text-align: center;
+      font-size: 18px;
+      display: flex;
+      justify-content: center;
+      align-items: center;
+    }
+    
+    @media screen and (max-width:768px) {
+     .swiper-slide {
+        width: 100%;
+      } 
+    }
