--- a/css/style.css
+++ b/css/style.css
@@ -108,6 +108,12 @@ p {
 * NAVBAR + OFFCANVAS
 *
 */
+
+.offcanvas-header img{
+    width: 40px;
+    height: auto;
+}
+
 /* Icona hamburger custom */
 .hamburger-icon {
     fill: var(--text-color);
