Add scroll-margin correction for sections to improve layout

--- a/css/style.css
+++ b/css/style.css
@@ -105,6 +105,14 @@ p {
 }
 
 /*
+* Correzione scroll-margin per sezioni
+*
+*/
+section {
+  scroll-margin-top: 80px; /* Altezza navbar + padding */
+}
+
+/*
 * NAVBAR + OFFCANVAS
 *
 */
