--- a/css/style.css
+++ b/css/style.css
@@ -69,6 +69,57 @@ p {
     font-size: 1.2rem;
 }
 
+/* Media query per schermi più piccoli */
+@media (max-width: 768px) {
+    h1 {
+        font-size: 3rem;
+    }
+
+    h2 {
+        font-size: 2.5rem;
+    }
+
+    h3 {
+        font-size: 2rem;
+    }
+
+    p {
+        font-size: 1rem;
+    }
+}
+
+@media (max-width:576px) {
+  h1 {
+      font-size: 2.5rem;
+  }
+  h2 {
+      font-size: 2rem;
+  }
+  h3 {
+      font-size: 1.5rem;
+  }
+  p {
+      font-size: 0.9rem;
+  }
+  
+}
+
+@media (max-width:400px) {
+  h1 {
+      font-size: 2rem;
+  }
+  h2 {
+      font-size: 1.5rem;
+  }
+  h3 {
+      font-size: 1.2rem;
+  }
+  p {
+      font-size: 0.8rem;
+  }
+  
+} 
+
 /*
 * ICONS STYLES
 *
