--- a/css/style.css
+++ b/css/style.css
@@ -272,10 +272,17 @@ section {
 *
 * HERO OVERLAY STYLES
 */
+.hero {
+    display: flex;
+    justify-content: center;
+    align-items: center;
+    width: 100%;
+}
 
 .hero-images {
     max-width: 1920px;
     margin: 0 auto;
+    width: 100%;
 }
 
 /*
