--- a/css/swiper.css
+++ b/css/swiper.css
@@ -16,3 +16,28 @@
         width: 100%;
       } 
     }
+
+    /* Paginazione Swiper */
+.swiper-pagination {
+    position: relative !important;
+    margin-top: 2rem;
+    bottom: 0 !important;
+}
+
+.swiper-pagination-bullet {
+    width: 10px;
+    height: 10px;
+    background-color: #d9d9d9;
+    opacity: 1;
+    margin: 0 8px !important;
+    transition: all 0.3s ease;
+}
+
+.swiper-pagination-bullet-active {
+    width: 16px;
+    height: 16px;
+    background-color: var(--primary-color);
+    border: 2px solid var(--primary-color);
+    box-shadow: 0 0 0 4px rgba(46, 69, 204, 0.2);
+    /* Crea l'effetto cerchio esterno maledetto */
+}
