--- a/css/style.css
+++ b/css/style.css
@@ -2,10 +2,11 @@
 :root {
     --primary-color: #2E45CC;
     --secondary-color: #04DF6C;
-    --background-color: #f5f5f5;
+    --background-color: #ffffff;
     --text-color: #3D3A38;
     --accent-color: #50e3c2;
     --rating-color: gold;
+    --focus-background: #f5f5f5;
 }
 
 body {
@@ -16,7 +17,13 @@ body {
     font-size: 16px;
 }
 
+.duck-faqs-accordion {
+    background-color: var(--background-color);
+}
 
+.focus-background {
+    background-color: var(--focus-background);
+}
 /*
 * TYPOGRAPHY STYLES
 *
@@ -387,6 +394,25 @@ section {
     color: var(--secondary-color);
 }
 
+.accordion-item.duck-faqs-accordion-item, .accordion-button.accordion-duck-faqs-button:not(.collapsed), .accordion-button.accordion-duck-faqs-button.collapsed{
+    border: none;
+    background: none;
+}
+
+.accordion-button.accordion-duck-faqs-button{
+    font-size: 1.8rem;
+    font-weight: 600;
+    color: var(--text-color);
+    padding: 1rem 2.5rem;
+}
+
+.accordion-body.accordion-duck-faqs-body{
+    font-size: 1.2rem;
+    line-height: 1.5;
+    color: var(--text-color);
+    font-weight: 400;
+    padding: 1rem 2.5rem;
+}
 
 /*
 * NEWSLETTER STYLES
@@ -406,4 +432,16 @@ section {
     height: 48px;
     /* fill: var(--secondary-color); */
     color: var(--secondary-color)
+}
+
+/*
+* Social Icons STYLES
+*
+*/
+
+.social-icon {
+    width: 32px;
+    height: 32px;
+    color: var(--secondary-color);
+    transition: fill 0.2s;
 }
