Enhance footer styles and adjust newsletter section layout for improved consistency

--- a/css/style.css
+++ b/css/style.css
@@ -24,6 +24,11 @@ body {
 .focus-background {
     background-color: var(--focus-background);
 }
+
+footer.bg-body-tertiary.text-center.py-4.m-0.focus-background {
+    background-color: var(--focus-background) !important;
+}
+
 /*
 * TYPOGRAPHY STYLES
 *
