--- a/css/swiper.css
+++ b/css/swiper.css
@@ -1,43 +1,61 @@
 .swiper {
-      width: 100%;
-      height: 100%;
-    }
+  width: 100%;
+  height: 100%;
+}
 
-    .swiper-slide {
-      text-align: center;
-      font-size: 18px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
-    }
-    
-    @media screen and (max-width:768px) {
-     .swiper-slide {
-        width: 100%;
-      } 
-    }
+.swiper-slide {
+  text-align: center;
+  font-size: 18px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+}
 
-    /* Paginazione Swiper */
+@media screen and (max-width:768px) {
+  .swiper-slide {
+    width: 100%;
+  }
+}
+
+/* Paginazione Swiper */
 .swiper-pagination {
-    position: relative !important;
-    margin-top: 2rem;
-    bottom: 0 !important;
+  position: relative !important;
+  margin-top: 2rem;
+  bottom: 0 !important;
 }
 
 .swiper-pagination-bullet {
-    width: 10px;
-    height: 10px;
-    background-color: #d9d9d9;
-    opacity: 1;
-    margin: 0 8px !important;
-    transition: all 0.3s ease;
+  width: 10px;
+  height: 10px;
+  background-color: #d9d9d9;
+  opacity: 1;
+  margin: 0 8px !important;
+  transition: all 0.3s ease;
 }
 
 .swiper-pagination-bullet-active {
-    width: 16px;
-    height: 16px;
-    background-color: var(--primary-color);
-    border: 2px solid var(--primary-color);
-    box-shadow: 0 0 0 4px rgba(46, 69, 204, 0.2);
-    /* Crea l'effetto cerchio esterno maledetto */
+  width: 16px;
+  height: 16px;
+  background-color: var(--primary-color);
+  border: 2px solid var(--primary-color);
+  box-shadow: 0 0 0 4px rgba(46, 69, 204, 0.2);
+  /* Crea l'effetto cerchio esterno maledetto */
+}
+
+.swiper-slide .card {
+  min-height: 450px;
+  display: flex;
+  flex-direction: column;
+  justify-content: space-between;
+}
+
+.swiper-slide .card p {
+  display: -webkit-box;
+  -webkit-line-clamp: 6;
+  /* max 6 righe */
+  -webkit-box-orient: vertical;
+  overflow: hidden;
+  text-overflow: ellipsis;
+  min-height: 300px;
+  /* altezza fissa per il paragrafo */
 }
