--- a/css/style.css
+++ b/css/style.css
@@ -143,6 +143,13 @@ p {
   
 } 
 
+#faqs h2.text-center.mb-4
+Specificity: (1,2,1)
+ {
+    font-size: 2.5rem;
+    /* Per override */
+ }
+
 /*
 * ICONS STYLES
 *
