--- a/css/swiper.css
+++ b/css/swiper.css
@@ -52,6 +52,7 @@
 .swiper-slide .card p {
   display: -webkit-box;
   -webkit-line-clamp: 6;
+  line-clamp: 6;
   /* max 6 righe */
   -webkit-box-orient: vertical;
   overflow: hidden;
